# insitudata-loader

./: .gitignore  pygeodes-config.json  pyproject.toml
config/: logging.yaml  pygeodes_config.json
data/satellites/sentinel2/: srf.csv
data/sentinel2/: Spectral Response Functions_Sentinel2.ods  tiles_bbox.csv
scripts/: build_all_s2_tiles_bbox.py  build_bbox_sentinel2.py  build_samples_csv_file.py  clear_tmp.py  compute_s2l2a_for_gloria.py  create_tile_csv_file.py  extract_s2l1c_for_gloria.py  main.py
src/insitudata_loader/: load_gloria.py
src/insitudata_loader/core/: __init__.py  data.py  pipeline.py  transform.py
src/insitudata_loader/maja/: __init__.py  l1c.py  l2a.py  paths.py  scheduling.py  slurm_commands.py
src/insitudata_loader/satellites/: __init__.py  geodes.py  satellite.py  srf.py
src/insitudata_loader/satellites/sentinel2/: __init__.py  geodes.py  srf.py  tiles.py
src/insitudata_loader/sources/: __init__.py  base.py
src/insitudata_loader/sources/gloria/: __init__.py  adapter.py  loader.py
src/insitudata_loader/transforms/: __init__.py  export.py  filter.py  spectral.py
src/insitudata_loader/utils/: __init__.py  logging.py  pandas_utils.py  paths.py  pygeodes_utils.py  s2_srf.py  string_utils.py  time_utils.py
src/insitudata_loader/visu/: __init__.py  pygeodes_visu.py
