[project]
authors = [{ name = "walcark", email = "kevin.walcarius@cnes.fr" }]
dependencies = []
name = "insitudata-loader"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.ruff]
line-length = 77

[tool.pixi.pypi-dependencies]
insitudata_loader = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
pandas = ">=2.3.3,<3"
numpy = ">=2.4.1,<3"
matplotlib = ">=3.10.8,<4"
requests = ">=2.32.5,<3"
tqdm = ">=4.67.1,<5"
geopandas = ">=1.1.2,<2"
ipython = ">=9.9.0,<10"
pystac = ">=1.14.3,<2"
whoosh = ">=2.7.4,<3"
rich = ">=14.2.0,<15"
boto3 = ">=1.42.27,<2"
aiofiles = ">=25.1.0,<26"
aiohttp = ">=3.13.3,<4"
remotezip = ">=0.12.3,<0.13"
validators = ">=0.35.0,<0.36"
fiona = ">=1.10.1,<2"
