[project]
authors = [{ name = "walcark", email = "kevin.walcarius@cnes.fr" }]
dependencies = []
name = "insitudata-loader"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.ruff]
line-length = 77

[tool.pixi.pypi-dependencies]
insitudata_loader = { path = ".", editable = true }

[tool.pixi.tasks]
build-s2-tiles = { cmd = "python scripts/build_bbox_sentinel2.py" }
clear-tmp = { cmd = "python scripts/clear_tmp.py" }
get-l1c = { cmd = "python scripts/extract_s2l1c_for_gloria.py" }
run-maja = { cmd = "python scripts/compute_s2l2a_for_gloria.py" }

[tool.pixi.dependencies]
python = "3.12.*"
pandas = ">=2.3.3,<3"
numpy = ">=2.4.1,<3"
matplotlib = ">=3.10.8,<4"
requests = ">=2.32.5,<3"
tqdm = ">=4.67.1,<5"
geopandas = ">=1.1.2,<2"
rich = ">=14.2.0,<15"
pyyaml = ">=6.0.3,<7"
colorlog = ">=6.10.1,<7"
